...
                    NavItem(MiuixIcons.Demibold.ListView, "商品", pagerState.currentPage == 1) {
                        if (pagerState.currentPage == 1) productsScrollTicks++ else scope.launch { pagerState.animateScrollToPage(1) }
                    }
                    NavItem(MiuixIcons.Demibold.Contacts, "客户", pagerState.currentPage == 2) {
                        if (pagerState.currentPage == 2) customersScrollTicks++ else scope.launch { pagerState.animateScrollToPage(2) }
                    }
                    NavItem(MiuixIcons.Demibold.Settings, "设置", pagerState.currentPage == 3) {
                        if (pagerState.currentPage != 3) scope.launch { pagerState.animateScrollToPage(3) }
                    }
                }
            }
        }
    }
...
